[FE] fix:fixed card align and hr

--- a/PrettyLion/mainboard/static/css/story.css
+++ b/PrettyLion/mainboard/static/css/story.css
@@ -57,11 +57,36 @@
 .project-section{
 
 }
-.project-card{
-
+ul, li{
+    list-style: none;
 }
-.project-section hr{
-    color:#0075BC;
+.project-section .project-card strong{
+    font-size: 16px;
+}
+.project-section .project-card p{
+}
+.project-section .project-card hr{
+    color: #0075BC;
+    border: 0px;
     background-color: #0075BC;
-    width:300px;
+    width: 30vw;
+    height: 2px;
+    margin-top: -10px;
+}
+.project-card{
+    /* 3장씩 들어가도록 */
+    width:30vw;
+    display:inline-block;
+    margin-left:5%;
+    margin-top:40px;
+}
+.project-card:nth-child(3n-2){
+    margin-left:0;
+}
+.project-card:nth-child(-n+3){
+    margin-top: 0;
+}
+.project-card-img{
+    width:100%;
+    height:200px;
 }
